--- a/index.html
+++ b/index.html
@@ -11,19 +11,23 @@
 </head>
 <body>
 <header class="hed">
-    <div class="menu">
-        <a href="#">GitHub</a>
+    <div class="butt">
+    <div class="logo">
+        Seforq.dev
     </div>
     <div class="menu">
-        <a href="#">Telegram</a>
+        <a href="https://github.com/Seforq">GitHub</a>
     </div>
     <div class="menu">
-        <a href="#">VK</a>
+        <a href="https://t.me/EL_CAPON_E">Telegram</a>
     </div>
     <div class="menu">
-        <a href="#">Projects</a>
+        <a href="https://vk.com/seforq">VK</a>
     </div>
-
+    <div class="menu">
+        <a href="#section2">Projects</a>
+    </div>
+    </div>
 </header>
 
 <main>
@@ -35,11 +39,56 @@
                 <p>Hi, I'm Seforq my name Sergey. Developer based in Novokuznetsk, Russia.</p>
                 <p>I beginner developer in Front-End.</p>
             </div>
+            <div class="social">
+                <a href="#"><img src="image/image11.png" alt=""></a>
+            </div>
+            <div class="tech">
+                <div class="main-tech">
+                    Main Tech
+                </div>
+                <div class="tech-img">
+                    <img src="image/css.png" alt="">
+                </div>
+                <div class="tech-img">
+                    <img src="image/html.png" alt="">
+                </div>
+                <div class="tech-img">
+                    <img src="image/js.png" alt="">
+                </div>
+                <div class="tech-img">
+                    <img src="image/img_1.png" alt="">
+                </div>
+            </div>
         </div>
         <div class="main-photo">
             <img src="image/image2.jpg" alt="">
         </div>
 
+    </section>
+    <section id="section2">
+        <div class="main-sect2">
+            <div class="text-top">
+                My Projects
+            </div>
+        </div>
+        <div class="block1">
+            <div class="text1">
+                Новый улучшенный во всем сайт, сделанный для университетского колледжа СибГИУ. Сайт готов к полноценной работе, и создавался под ключ.
+            </div>
+            <div class="up-img">
+                <a href=""><img src="image/image3.jpg" alt=""></a>
+            </div>
+        </div>
+
+        <div class="block2">
+            <div class="up-img1">
+                <a href=""><img src="image/image3.jpg" alt=""></a>
+            </div>
+            <div class="text2">
+                Новый улучшенный во всем сайт, сделанный для университетского колледжа СибГИУ. Сайт готов к полноценной работе, и создавался под ключ.
+            </div>
+
+        </div>
     </section>
 </main>
 
