--- a/index.html
+++ b/index.html
@@ -12,21 +12,23 @@
 <body>
 <header class="hed">
     <div class="butt">
-    <div class="logo">
-        Seforq.dev
-    </div>
-    <div class="menu">
-        <a href="https://github.com/Seforq">GitHub</a>
-    </div>
-    <div class="menu">
-        <a href="https://t.me/EL_CAPON_E">Telegram</a>
-    </div>
-    <div class="menu">
-        <a href="https://vk.com/seforq">VK</a>
-    </div>
-    <div class="menu">
-        <a href="#section2">Projects</a>
-    </div>
+        <div class="logo">
+            Seforq.dev
+        </div>
+        <div class="dropcheck">
+        <div class="menu">
+            <a href="https://github.com/Seforq">GitHub</a>
+        </div>
+        <div class="menu">
+            <a href="https://t.me/EL_CAPON_E">Telegram</a>
+        </div>
+        <div class="menu">
+            <a href="https://vk.com/seforq">VK</a>
+        </div>
+        <div class="menu">
+            <a href="#section2">Projects</a>
+        </div>
+        </div>
     </div>
 </header>
 
@@ -73,19 +75,21 @@
         </div>
         <div class="block1">
             <div class="text1">
-                Новый улучшенный во всем сайт, сделанный для университетского колледжа СибГИУ. Сайт готов к полноценной работе, и создавался под ключ.
+                Новый улучшенный во всем сайт, сделанный для университетского колледжа СибГИУ. Сайт готов к полноценной
+                работе, и создавался под ключ.
             </div>
             <div class="up-img">
                 <a href=""><img src="image/image3.jpg" alt=""></a>
             </div>
         </div>
-
+<hr>
         <div class="block2">
             <div class="up-img1">
                 <a href=""><img src="image/image3.jpg" alt=""></a>
             </div>
             <div class="text2">
-                Новый улучшенный во всем сайт, сделанный для университетского колледжа СибГИУ. Сайт готов к полноценной работе, и создавался под ключ.
+                Новый улучшенный во всем сайт, сделанный для университетского колледжа СибГИУ. Сайт готов к полноценной
+                работе, и создавался под ключ.
             </div>
 
         </div>
@@ -93,4 +97,5 @@
 </main>
 
 </body>
+<script src="button.js"></script>
 </html>
